--- a/www/real-estate-staging-intensive.htm
+++ b/www/real-estate-staging-intensive.htm
@@ -103,7 +103,7 @@
             <!-- real estate staging training and home staging training -->
             <p class="course-description">A 2-day real estate staging training (home staging training)</p>
             <p><strong>Are you interested in learning all there is to know about Real Estate Staging?&nbsp;</strong> Then this real estate staging training workshop is perfect for you!:</p>
-            During this workshop you will learn:
+            <p>During this workshop you will learn:</p>
             <ul type="disc">
               <li><img src="images/staging_bedroom.jpg" alt="Real estate staging training and home staging training: the School of Interior Redesign's Real Estate Staging for the Professional training workshop is offered with a one-or-two-day option and is ideal for anyone interested in enhancing your current interior design, decorating, or real estate related business by offering home staging services." width="250" height="166" hspace="6" vspace="12" align="right" />The philosophy of real estate staging </li>
               <li>What are the areas to spend the most money&ndash;and which aren't</li>
