Updated page template
Switch from tables to DIV elements.

--- a/www/thankyou.htm
+++ b/www/thankyou.htm
@@ -11,18 +11,7 @@
 <!-- InstanceEndEditable -->
 <link href="styles/SIR_style.css" rel="stylesheet" type="text/css" />
 <style type="text/css">
-<!--
-.style1 {
-	color: #990000;
-	font-style: italic;
-}
-.classname {
-	font-style: italic
-}
-.classname1 {
-	font-style: italic
-}
--->
+
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -39,22 +28,26 @@
 
 <body>
 <a name="top"></a>
-<table width="760" border="6" align="center" cellpadding="0" cellspacing="0" bordercolor="#000000">
-  <tr>
-    <td align="center" valign="top"><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
-        <tr>
-          <td height="180" colspan="2" rowspan="2" align="center" valign="middle"><img src="images/logo_school_of_interior_redesign.jpg" alt="The School of Interior Redesign, LLC, offers classroom training and certificate programs in interior redesign, interior decorating, one day decorating, home staging training, and real estate staging training, as well as redecorating and staging workshops, seminars, home study courses and teleclasses." width="130" height="150" /></td>
-          <td bgcolor="#000000" width="7" rowspan="2" align="center" valign="middle"><img src="images/black_line.jpg" width="6" /></td>
-          <td width="540" height="40" align="center" valign="bottom"><img src="images/teaching_redesign_staging.jpg" alt="In addition to training in interior redesign and interior decorating training, the School of Interior Redesign also offers real estate staging training, home staging training, workshops and seminars on how to start an interior design, redesign, redecorating, or real estate staging business, how to add redesign or home staging to your existing design or real estate related business, and how to market your redesign and home staging business and services." width="382" height="25" /></td>
-        </tr>
-        <tr>
-          <td width="540" height="140" align="center" valign="middle"><img src="images/real_estate_staging_LR_115.jpg" alt="If you are interested in real estate staging training or home staging training to start a staging business, or you want to add real estate staging or home staging services to your existing design, redesign, redecorating, or real estate related business, the School of Interior Redesign offers real estate staging training classes, certificate programs, workshops, seminars, home study and teleclasses." width="173" height="115" hspace="2" />&nbsp; <img src="images/real_estate_staging_BA_115.jpg" alt="If you are interested in interior redesign, interior decorating, or interior redecorating (sometimes called one day decorating) as a business, or you want to add interior redesign, interior design, or redecorating to your existing design, real estate staging, or home staging business, the School of Interior Redesign offers training classes, certificate programs, workshops, seminars, home study and teleclasses in interior decorating, interior redesign and one day redecorating." width="148" height="115" hspace="2" />&nbsp; <img src="images/real_estate_staging_BED_115.jpg" alt="If you already have the technical skills necessary to have a business in interior decorating, or the fast-growing fields of interior redesign (one day decorating) or real estate staging (home staging), but just aren't sure how to do it, the School of Interior Redesign offers real estate staging training, home staging training, home study and teleclasses on how to start and establish a design or staging business, how to successfully market an interior decorating, interior redesign, or home staging business, plus a unique design your own teleclass option to address your specific business or marketing issues with individualized business consulting by teleclass." width="173" height="115" hspace="2" /></td>
-        </tr>
-        <tr class="address-bar">
-          <td height="28" colspan="4"><img src="images/address_school_of_interior_redesign.jpg" height="13" border="0" usemap="#Map" /></td>
-        </tr>
-        <tr>
-          <td colspan="2" align="left" valign="top"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
+<div class="main-content">
+  <div class="page-header">
+    <div class="logo"><img src="images/logo_school_of_interior_redesign.jpg" alt="The School of Interior Redesign, LLC, offers classroom training and certificate programs in interior redesign, interior decorating, one day decorating, home staging training, and real estate staging training, as well as redecorating and staging workshops, seminars, home study courses and teleclasses." width="130" height="150" /></div>
+    <div class="banner">
+      <div class="tagline"><img src="images/teaching_redesign_staging.jpg" alt="In addition to training in interior redesign and interior decorating training, the School of Interior Redesign also offers real estate staging training, home staging training, workshops and seminars on how to start an interior design, redesign, redecorating, or real estate staging business, how to add redesign or home staging to your existing design or real estate related business, and how to market your redesign and home staging business and services." width="382" height="25" /></div>
+      <div class="banner-images">
+        <span class="banner-image"><img src="images/real_estate_staging_LR_115.jpg" alt="If you are interested in real estate staging training or home staging training to start a staging business, or you want to add real estate staging or home staging services to your existing design, redesign, redecorating, or real estate related business, the School of Interior Redesign offers real estate staging training classes, certificate programs, workshops, seminars, home study and teleclasses." width="173" height="115" hspace="2" /></span>
+        <span class="banner-image"><img src="images/real_estate_staging_BA_115.jpg" alt="If you are interested in interior redesign, interior decorating, or interior redecorating (sometimes called one day decorating) as a business, or you want to add interior redesign, interior design, or redecorating to your existing design, real estate staging, or home staging business, the School of Interior Redesign offers training classes, certificate programs, workshops, seminars, home study and teleclasses in interior decorating, interior redesign and one day redecorating." width="148" height="115" hspace="2" /></span>
+        <span class="banner-image"><img src="images/real_estate_staging_BED_115.jpg" alt="If you already have the technical skills necessary to have a business in interior decorating, or the fast-growing fields of interior redesign (one day decorating) or real estate staging (home staging), but just aren't sure how to do it, the School of Interior Redesign offers real estate staging training, home staging training, home study and teleclasses on how to start and establish a design or staging business, how to successfully market an interior decorating, interior redesign, or home staging business, plus a unique design your own teleclass option to address your specific business or marketing issues with individualized business consulting by teleclass." width="173" height="115" hspace="2" /></span>
+      </div>
+    </div>
+  </div>
+  <div class="page-contact-info">
+    <span class="address">P.O. Box 183</span>
+    <span class="city-state-zip">Milford, CT 06460</span>
+    <span class="phone">(203) 783-1556</span>
+    <span class="email"><a href="mailto:info@schoolofinteriorredesign.com">info@schoolofinteriorredesign.com</a></span>
+  </div>
+  <div class="page-body">
+    <div class="navigation"><!-- #BeginLibraryItem "/Library/site-navigation.lbi" --><ul class="navbar">
           	<li><a href="index.htm">Home Page</a></li>
 <!--            <li><a href="../questions-interior-redesign-staging-training.htm">Questions You Should Ask</a></li>-->
             <li><span class="node">Classes</span> 
@@ -94,10 +87,8 @@
             <li><a href="staff-redesign-staging-school.htm">Meet The Instructors</a></li>
             <li><a href="ezine-redesign-staging-school.htm">Free E-Zine</a></li>
             <li><a href="contact-redesign-real-estate-staging-school.htm">Contact Us</a></li>
-          </ul><!-- #EndLibraryItem --></td>
-          <td bgcolor="#000000" align="left" valign="top" class="navbar"><img src="images/black_line.jpg" width="6" /></td>
-          <td width="540" align="left" valign="top"><br />
-            <!-- InstanceBeginEditable name="content" -->
+          </ul><!-- #EndLibraryItem --></div>
+    <div class="page-content"><!-- InstanceBeginEditable name="content" -->
             <h1 align="center">&nbsp;</h1>
             <p align="center">&nbsp;</p>
             <p align="center">&nbsp;</p>
@@ -107,28 +98,17 @@
             <p></p>
             <p align="center">&nbsp;</p>
             <p>&nbsp;</p>
-          <!-- InstanceEndEditable --></td>
-        </tr>
-        <tr>
-          <td width="10" align="left" valign="top" class="navbar">&nbsp;</td>
-          <td width="200" height="20" align="left" valign="top" class="navbar">&nbsp;</td>
-          <td height="20" align="left" valign="top" bgcolor="#000000" class="navbar">&nbsp;</td>
-          <td height="20" align="left" valign="top">&nbsp;</td>
-        </tr>
-        <tr class="affiliates">
-			<td height="100" align="center" valign="middle" colspan="4">
-                <a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a>
-                <a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a>
-                <a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a>
-				<div class="footer"><a class="footer" href="#top">Return to top of page</a></div>
-			</td>
-        </tr>
-      </table></td>
-  </tr>
-</table>
-<p align="center" class="footer">Copyright &copy; 2004-2019 School of Interior Redesign, LLC.&nbsp;All rights reserved.<br/></p>
-<map name="Map" id="Map">
-  <area shape="rect" coords="411,0,625,14" href="mailto:info@schoolofinteriorredesign.com" />
-</map>
+          <!-- InstanceEndEditable --></div>
+  </div>
+  <div class="page-footer">
+    <div class="affiliates">
+      <span class="affiliate-logo"><a href="http://www.associationofdesigneducation.com" target="_blank"><img src="images/logo_ADE.jpg" alt="Ann Anderson, Founder and Director of the School of Interior Redesign, is a member of ADE, the Association of Design Education, an organization of professionals who teach interior decorating, interior redesign, one day decorating, home staging and real estate staging." height="70" hspace="14" border="0" /></a></span>
+      <span class="affiliate-logo"><a href="http://www.networkofexecutivewomen.org" target="_blank"><img src="images/newlogo_transp.gif" width="121" height="68" hspace="14" border="0" /></a></span>
+      <span class="affiliate-logo"><a href="http://www.interiordesignsociety.org/" target="_blank"><img src="images/logo_ids.jpg" alt="Ann Anderson, a graduate of the Sheffield School of Interior Design and a Certified Interior Redesign Specialist, is a member of IDS, the Interior Design Society." width="95" height="70" hspace="14" border="0" /></a></span>
+    </div>
+    <div class="return-to-top"><span><a class="footer" href="#top">Return to Top of Page</a></span></div>
+  </div>
+</div>
+<div class="footer copyright">Copyright &copy;2004-2019 School of Interior Redesign, LLC. All rights reserved.</div>
 </body>
 <!-- InstanceEnd --></html>
